# dtop

./: .gitignore  CHANGELOG.md  CLAUDE.md  Cargo.toml  Dockerfile  Justfile  README.md  config.example.yaml  dist-workspace.toml  flake.nix
.github/workflows/: homebrew-update.yml  nix-update.yml  test.yml
docs/: index.html
openspec/changes/update-progress-bar-style/: proposal.md  tasks.md
scripts/: update-nix-hashes.sh
src/: main.rs
src/cli/: config.rs  connect.rs  filters.rs  mod.rs
src/core/: types.rs
src/core/app_state/: container_events.rs  mod.rs  search.rs  sorting.rs
src/docker/: actions.rs  connection.rs  stats.rs
src/ui/: container_list.rs  formatters.rs  log_view.rs  render.rs  ui_tests.rs
src/ui/snapshots/: datop__ui__ui_tests__tests__action_menu_enabled.snap  datop__ui__ui_tests__tests__connection_error_notification.snap  datop__ui__ui_tests__tests__container_list_with_stopped_containers.snap  datop__ui__ui_tests__tests__empty_container_list.snap  datop__ui__ui_tests__tests__filtering_active_search_mode_off.snap  datop__ui__ui_tests__tests__help_popup_enabled.snap  datop__ui__ui_tests__tests__high_resource_usage.snap  datop__ui__ui_tests__tests__log_view_empty.snap  datop__ui__ui_tests__tests__log_view_manual_scroll.snap  datop__ui__ui_tests__tests__log_view_with_content.snap  datop__ui__ui_tests__tests__multi_host_container_list.snap  datop__ui__ui_tests__tests__search_mode_active.snap  datop__ui__ui_tests__tests__single_host_container_list.snap  datop__ui__ui_tests__tests__wide_terminal_with_progress_bars.snap  dtop__ui__ui_tests__tests__action_menu_enabled.snap  dtop__ui__ui_tests__tests__connection_error_notification.snap  dtop__ui__ui_tests__tests__container_list_with_stopped_containers.snap  dtop__ui__ui_tests__tests__empty_container_list.snap  dtop__ui__ui_tests__tests__filtering_active_search_mode_off.snap  dtop__ui__ui_tests__tests__help_popup_enabled.snap  (+7 more)
(+1 files in other folders)
