[package]
name = "datop"
version = "0.6.0-alpha"
edition = "2024"
description = "A terminal-based Docker container monitoring tool with real-time CPU and memory metrics"
license = "MIT"
repository = "https://github.com/amir20/dtop"
homepage = "https://github.com/amir20/dtop"
documentation = "https://github.com/amir20/dtop"

[features]
default = ["self-update"]
self-update = ["dep:self_update"]

[dependencies]
ratatui = "0.29"
crossterm = "0.28"
tokio = { version = "1", features = ["full"] }
futures-util = "0.3"
bollard = {version= "0.19.4", features = ["ssh", "ssl"]}
clap = { version = "4.5", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
dirs = "6.0"
chrono = "0.4"
open = "5.3"
ansi-to-tui = "7.0"
timeago = "0.5"
url = "2.5"
tui-input = "0.14"
self_update = { version = "0.42", default-features = false, features = ["archive-tar", "compression-flate2", "rustls"], optional = true }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter"] }

[dev-dependencies]
insta = { version = "1.43", features = ["filters"] }
mockall = "0.14"

[profile.release]
strip = true          # Strip all symbols for smallest binary size
lto = "fat"           # Link-time optimization for better performance
codegen-units = 1     # Single codegen unit for maximum optimization
opt-level = "z"       # Optimize for size

[profile.release-with-debug]
inherits = "release"
strip = false
debug = true

# The profile that 'dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"


[package.metadata.release]
push = true
tag = true
pre-release-hook = ["git-cliff", "v0.3.0..", "-o", "CHANGELOG.md", "--tag", "{{version}}"]

# git-cliff configuration for cargo-dist integration
[package.metadata.dist]
changelog = "CHANGELOG.md"
